<resources>
    <string name="app_name">CareConnect</string>
    <string name="title_section1">Patient informatie</string>
    <string name="title_section2">Dashboard</string>
    <string name="title_section3">Documenten</string>
    <string name="title_section4">SOEP</string>
    <string name="title_section5">Voorschrift</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Instellingen</string>
    <string name="Camera">Camera</string>
    <string name="Calendar">Kalender</string>
    <string name="Search">Zoeken</string>
    <string-array name="medicatie">
        <item>Diclofenac</item>
        <item>Omeprazol</item>
        <item>Amoxicilline</item>
        <item>Doxycycline</item>
        <item>Metoprolol</item>
    </string-array>
    <string-array name="problemen">
        <item>Acute infectie bovenste luchtwegen</item>
        <item>Verondersteld infect gastro-enteritis</item>
        <item>Influenza</item>
        <item>Acute bronchitis/bronchiolitis</item>
        <item>Symptomen/klachten lage-rug</item>
    </string-array>
    <string-array name="allergenen">
        <item>Pollen</item>
        <item>Schimmel</item>
        <item>Stofmijt</item>
        <item>Gras</item>
        <item>Rhinitis</item>
    </string-array>
    <string-array name="intoleranties">
        <item>Lactose</item>
        <item>Fructose</item>
        <item>Histamine</item>
        <item>Gluten</item>
        <item>Tuinbonen</item>
    </string-array>
    <string-array name="laatste_labo_resultaten">
        <item>Glucose (70–110 mg/dL)</item>
        <item>Hemoglobine A1c (4–6%)</item>
        <item>Ureum (&lt;50 mg/dL)</item>
        <item>Creatinine (0.4 -1.1mg/dL)</item>
        <item>Creatinine clearance (MDRD) (55–105 mL/min)</item>
    </string-array>
    <string-array name="antecedenten">
        <item>Scheurwond/snijwond</item>
        <item>Schoudersyndroom</item>
        <item>Zieke oesophagus</item>
        <item>Stoornis maagfunctie</item>
        <item>Dermatomycose</item>
    </string-array>
    <string-array name="soep">
        <item>Subjectief</item>
        <item>Objectief</item>
        <item>Evaluatie</item>
        <item>Planning</item>
    </string-array>
    <string-array name="most_used_subjective">
        <item>pijn in rug</item>
        <item>hoofdpijn</item>
        <item>slechte smaak</item>
        <item>nekpijn</item>
        <item>droge hoest</item>
        <item>opgeblazen gevoel</item>
        <item>slecht zicht</item>
        <item>duizelig</item>
        <item>hevige regels</item>
        <item>bloed bij plassen</item>
    </string-array>
    <string-array name="recent_subjective">
        <item>beroerte</item>
        <item>nek- en rugklachten</item>
        <item>ontstoken urinewegen</item>
        <item>contacteczeem</item>
        <item>staar</item>
        <item>oorsuizen</item>
        <item>migraine</item>
        <item>epilepsi</item>
        <item>schizofrenie</item>
        <item>slapeloosheid</item>
    </string-array>
    <string-array name="prehistory_subjective">
        <item>astma</item>
        <item>angststoornissen</item>
        <item>overspanning</item>
        <item>herpes</item>
        <item>diabetis</item>
        <item>hoge bloeddruk</item>
        <item>griep</item>
        <item>zware hoest</item>
        <item>ontstoken schouder</item>
        <item>snijwonde</item>
        <item>genitale wratten</item>
    </string-array>
    <string-array name="colleagues_subjective">
        <item>pijn in rug</item>
        <item>hoofdpijn</item>
        <item>slechte smaak</item>
        <item>nekpijn</item>
        <item>droge hoest</item>
        <item>opgeblazen gevoel</item>
        <item>slecht zicht</item>
        <item>duizelig</item>
        <item>rode ogen</item>
        <item>overgewicht</item>
    </string-array>
    <string-array name="favorites_subjective">
        <item>alles ok</item>
        <item>rode keel</item>
        <item>misselijk</item>
        <item>depressie</item>
        <item>steken in maag</item>
        <item>moeilijkheden met ademen</item>
        <item>zwarte plekjes in zicht</item>
        <item>te lage bloeddruk</item>
        <item>schimmelplekjes</item>
    </string-array>
    <string-array name="evaluation_suggestions">
        <item>R74 Acute infectie bovenste luchtwegen</item>
        <item>D73 Verondersteld infect gastro_enteritis</item>
        <item>R80 Influenza</item>
        <item>R78 Acute bronchitis</item>
        <item>L03 Symptomen/klachten lage rug</item>
    </string-array>
    <string-array name="evalution_suggestions_spare">
        <item>L83 Neksyndroom</item>
        <item>U71 Cystitis</item>
        <item>R75 Acute/chronische sinusitis</item>
        <item>L87 Bursitis/tendinitis/synoviitis nao</item>
        <item>S16 Buil/kneuzing</item>
        <item>R77 Acute laryngitis/tracheitis</item>
    </string-array>
    <string name="icpc_chapters">ICPC Hoofdstukken</string>
    <string-array name="prehistory_evaluation">
        <item>A00 fam.anamnese algemeen, niet gespec.</item>
        <item>A01 pijn gegen./niet gespec.</item>
        <item>A02 koude rillingen</item>
        <item>A03 koorts</item>
        <item>A04 moeheid/ziektegevoel</item>
    </string-array>
    <string-array name="recent_evaluation">
        <item>A06 flauwvallen/syncope</item>
        <item>A07 coma</item>
        <item>A08 zwelling (ex. oedeem K07)</item>
        <item>A09 transpiratieproblemen</item>
        <item>A10 bloeding (lokalisatie nao)</item>
    </string-array>
    <string-array name="most_used_evaluation">
        <item>A14 koliek bij zuigeling</item>
        <item>A15 overmatig huilende zuigeling</item>
        <item>A16 prikkelbare/drukke zuigeling</item>
        <item>A17 and. alg. sympt/klacht. zuigeling neg</item>
    </string-array>
    <string-array name="favorites_evaluation">
        <item>A27 angst voor andere ziekte nao neg</item>
        <item>A28 handicap/beperking nao</item>
        <item>A29 andere algemene symptomen/klachten</item>
        <item>A70 tuberculose gegen. (ex. R70)</item>
    </string-array>
    <string-array name="icpc_a">
        <item>A71 mazelen</item>
        <item>A72 waterpokken</item>
        <item>A73 malaria</item>
        <item>A74 rode hond</item>
        <item>A20 euthanasie verzoek/gesprek over</item>
        <item>A25 angst voor de dood</item>
        <item>A26 angst voor kanker nao neg</item>
        <item>A05 algehele achteruitgang</item>
        <item>A12 allergie/allergische reactie neg</item>
        <item>A13 bezorgdheid bijwerking geneesmiddel</item>
        <item>A75 mononucleosis infectiosa</item>
        <item>A76 andere virusziekten met exantheem</item>
        <item>A77 andere virusziekten nao</item>
        <item>A78 andere infectieziekten nao</item>
        <item>A79 maligne neopl. (onbekende prim. lok)</item>
        <item>A80 ongeval trauma nao</item>
        <item>A81 multipele/inwendige traumata</item>
        <item>A82 late gevolgen van trauma</item>
        <item>A84 geneesmiddel intoxicatie</item>
        <item>A85 geneesmiddel bijwerking</item>
        <item>A86 intoxicaties andere chem. stof</item>
        <item>A87 complicaties medische behandeling</item>
        <item>A88 schadel.gevolgen fys. factoren (ex. H85)</item>
        <item>A89 gevolgen prothese neg/pacemaker</item>
        <item>A90 congen. syndromen/mult. afwijkingen</item>
        <item>A91 afwijkende uitslag onderzoek neg</item>
        <item>A92 toxoplasmose (incl. congenitale)</item>
        <item>A93 prematuur/immatuur levendgeb. kind</item>
        <item>A94 alle andere perinatale morbiditeit</item>
        <item>A95 perinatale mortaliteit</item>
        <item>A96 dood/overlijden (ex. perinataal)</item>
        <item>A97 geen ziekte</item>
        <item>A99 andere gegeneraliseerde ziekten</item>
    </string-array>
    <string-array name="medication_soap">
        <item>Adalimumab</item>
        <item>Etanercept</item>
        <item>Atorvastatine</item>
        <item>Salmeterol met fluticason</item>
        <item>Tiotropium</item>
        <item>Formoterol met budesonide</item>
        <item>Esomeprazol</item>
        <item>Metropolol</item>
        <item>Omeprazol</item>
    </string-array>
    <string-array name="medication_taken_before">
        <item>Codeine</item>
        <item>Acetylsalicylzuur</item>
        <item>Overige emollientia en protectiva</item>
        <item>Triamcinolon</item>
        <item>Nitrofurantoine</item>
        <item>Fusidinezuur</item>
        <item>Pantoprazol</item>
        <item>Temazepam</item>
        <item>Carbasalaatcalcium</item>
    </string-array>
    <string-array name="medication_family">
        <item>Macrogol combinatiepreparaten</item>
        <item>Naproxen</item>
        <item>Acetylsalicylzuur</item>
        <item>Metformine</item>
        <item>Atorvastatine</item>
        <item>Desloratadine</item>
        <item>Fluticason</item>
        <item>Levocetirizine</item>
        <item>Hydrocortison</item>
    </string-array>
    <string-array name="medication_location">
        <item>Diazepam</item>
        <item>Salmeterol</item>
        <item>Fusidinezuur</item>
        <item>Prednisolon</item>
        <item>Azitromycine</item>
        <item>Furosemide</item>
        <item>Claritromycine</item>
        <item>Mometason</item>
        <item>Levothyroxine</item>
    </string-array>
    <string-array name="medication_most_used">
        <item>Diclofenac</item>
        <item>Amoxicilline</item>
        <item>Omeprazol</item>
        <item>Doxycycline</item>
        <item>Ibuprofen</item>
        <item>Simvastatine</item>
        <item>Codeine</item>
        <item>Hydrocortison</item>
        <item>Fusidinezuur</item>
        <item>Pantoprazol</item>
        <item>Temazepam</item>
    </string-array>
    <string-array name="medication_recent">
        <item>Hydrocortison</item>
        <item>Paracetamol</item>
        <item>Metoprolol</item>
        <item>Augmentin</item>
        <item>Salbutamol</item>
        <item>Acetylsalicylzuur</item>
        <item>Triamcinolon</item>
        <item>Nitrofurantoine</item>
        <item>Carbasalaatcalcium</item>
        <item>Naproxen</item>
    </string-array>
    <string-array name="objective_favorites">
        <item>keel is ontstoken</item>
        <item>onderbuik doet pijn bij druk</item>
        <item>verkoudheid</item>
        <item>bloed in urine</item>
        <item>ontstoken wonde</item>
        <item>overgevoelig voor licht</item>
        <item>vergeetachtigheid</item>
    </string-array>
    <string-array name="objective_subjective_based">
        <item>gesprongen aders in ogen</item>
        <item>gezwollen klieren</item>
        <item>pijn en zwellingen in de gewrichten</item>
        <item>jeuk in gezicht</item>
        <item>oorsuizen</item>
        <item>problemen met slapen</item>
        <item>hartklopping</item>
    </string-array>
    <string name="speech_btn_description">Toets om via spraak tekst in te geven</string>
    <string name="inputfield_hint">Type, of sleep uw gewenste input naar dit venstertje…</string>
    <string name="recent">Recent</string>
    <string name="most_used">Meest gebruikt</string>
    <string name="prehistory">Voorgeschiedenis patient</string>
    <string name="suggestions">Suggesties</string>
    <string name="soep_based">Op basis van SOEP</string>
    <string name="taken_before">Al eerder ingenomen</string>
    <string name="family_based">Op basis van familie</string>
    <string name="location_based">Op basis van locatie</string>
    <string name="favorites">Favorieten</string>
    <string name="parameters">Parameters</string>
</resources>