<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="robindecroon.careconnect.MainActivity">
    <item
        android:id="@+id/action_camera"
        android:title="@string/Camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_calendar"
        android:title="@string/Calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:title="@string/Search"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
