<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_background_pattern"
    android:tag="EVALUATION_TAG"
    tools:context="robindecroon.careconnect.ui.soap.EvaluationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:padding="15dp">

            <EditText
                android:id="@+id/prescription_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/content_back"
                android:hint="@string/inputfield_hint" />

            <ImageButton
                android:id="@+id/btnSpeakPrescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/speech_btn_description"
                android:src="@android:drawable/ic_btn_speak_now" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/soap_based"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:text="@string/soep_based"
                android:layout_marginLeft="30sp"
                android:textColor="@android:color/black" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="20dp">


                <LinearLayout
                    android:id="@+id/taken_before"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:text="@string/taken_before"
                android:layout_marginLeft="30sp"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="20dp">


                <LinearLayout
                    android:id="@+id/family_based"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:text="@string/family_based"
                android:layout_marginLeft="30sp"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="20dp">


                <LinearLayout
                    android:id="@+id/location_based"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:text="@string/location_based"
                android:layout_marginLeft="30sp"
                android:textColor="@android:color/black" />

        </RelativeLayout>


    </LinearLayout>

</FrameLayout>
