<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_background_pattern"
    android:tag="EVALUATION_TAG"
    tools:context="robindecroon.careconnect.ui.soap.EvaluationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:padding="15dp">

            <robindecroon.careconnect.util.ClearableAutoCompleteTextView
                android:id="@+id/evaluation_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:completionThreshold="1"
                android:background="@drawable/content_back"
                android:hint="@string/inputfield_hint" />

            <ImageButton
                android:id="@+id/btnSpeakEvaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/speech_btn_description"
                android:src="@android:drawable/ic_btn_speak_now" />

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/soap_height">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="@dimen/soap_padding">

                <LinearLayout
                    android:id="@+id/suggestion_evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:text="@string/suggestions"
                android:layout_marginLeft="30sp"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/soap_height">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="@dimen/soap_padding">

                <LinearLayout
                    android:id="@+id/chronic_evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:id="@+id/chronic_diseases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:layout_marginLeft="30sp"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/soap_height">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="@dimen/soap_padding">

                <LinearLayout
                    android:id="@+id/history_evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:text="@string/prehistory"
                android:layout_marginLeft="30sp"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/soap_height">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="@dimen/soap_padding">

                <LinearLayout
                    android:id="@+id/recent_evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:layout_marginLeft="30sp"
                android:text="@string/recent"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/soap_height">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="@dimen/soap_padding">

                <LinearLayout
                    android:id="@+id/most_used_evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:layout_marginLeft="30sp"
                android:text="@string/most_used"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="@dimen/soap_height">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:background="@drawable/frame"
                android:orientation="vertical"
                android:padding="@dimen/soap_padding">

                <LinearLayout
                    android:id="@+id/favorites_evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>


            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background_pattern"
                android:padding="5dp"
                android:layout_marginLeft="30sp"
                android:text="@string/favorites"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
